--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ div#board {
 	width: 1024px;
 	height: 863px;
 	margin: auto;
-	background:url(images/board.jpg) no-repeat;
+	background:url("images/board.jpg") no-repeat;
 }
 
 table {
@@ -42,3 +42,22 @@ form {
 	background-color: rgb(83, 175, 19);
 	font-size: 1em;
 }
+
+/****** DYNAMIC STYLING *******/
+
+.hit {
+	background: url("images/ship.png") no-repeat center center;
+}
+
+.miss {
+	background:url("images/miss.png") no-repeat center center;
+}
+
+
+
+
+
+
+
+
+
